# SalesManager-OOP

./: Administrator.h  AdministratorManager.h  CMakeLists.txt  Company.h  CompanyManager.h  Customer.h  CustomerManager.h  Help.h  Order.h  OrderItem.h  OrderItemManager.h  OrderManager.h  Person.h  PersonManager.h  Product.h  ProductManager.h  README.md  SalesManager.h  ShopCart.h  Stock.h  StockManager.h  SystemManager.h  User.h  UserManager.h  main.cpp
.history/: Administrator_20240209182649.h  Company_20240209020446.h  Company_20240209020453.h  Company_20240209020626.h  Company_20240209021926.h  Company_20240209022011.h  Company_20240209022056.h  Company_20240209182649.h  Coupon_20240209182649.h  CustomerManager_20240209192744.h  CustomerManager_20240209192848.h  CustomerManager_20240209193047.h  CustomerManager_20240209193747.h  CustomerManager_20240209193801.h  Customer_20240209020427.h  Customer_20240209021252.h  Customer_20240209021320.h  Customer_20240209021728.h  Customer_20240209183213.h  Customer_20240209192744.h  Customer_20240209193018.h  Customer_20240209205429.h  Customer_20240209205529.h  Customer_20240209205654.h  Customer_20240209205817.h  Customer_20240209212454.h  Customer_20240209215229.h  Customer_20240209220436.h  Person_20240209182649.h  Transaction_20240209192744.h  Transaction_20240209192848.h  UserManager_20240209182649.h  UserManager_20240209192744.h  UserManager_20240209193747.h  UserManager_20240209205429.h  UserManager_20240209215229.h  User_20240209014140.h  User_20240209020427.h  User_20240209021133.h  User_20240209021214.h  (+62 more)
